microsoft.extensions.dependencyinjection

--- a/TwoWindowsMVVM.csproj
+++ b/TwoWindowsMVVM.csproj
@@ -7,4 +7,12 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+	<ItemGroup>
+		<PackageReference Include="microsoft.extensions.dependencyinjection" Version="7.0.0"/>
+	</ItemGroup>
+  <ItemGroup>
+    <None Remove=".gitattributes" />
+    <None Remove=".gitignore" />
+  </ItemGroup>
+
 </Project>
